--- a/application.properties
+++ b/application.properties
@@ -1,13 +1,13 @@
-#utf-8
-#Wed Aug 12 15:50:02 CEST 2009
-app.grails.version=1.2-M2
+#Grails Metadata file
+#Sat Oct 24 19:15:54 CEST 2009
+app.grails.version=1.2-M3
 app.name=dont-forget-your-food-supplies
 app.servlet.version=2.4
 app.version=0.2
 plugins.filterpane=0.6.1
-plugins.hibernate=1.2-M2
+plugins.hibernate=1.2-M3
 plugins.jquery=1.3.2.4
 plugins.mail=0.7.1
 plugins.quartz=0.4.1
 plugins.searchable=0.5.5
-plugins.tomcat=1.2-M2
+plugins.tomcat=1.2-M3
