application.properties erneuert

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Sat Oct 24 19:15:54 CEST 2009
+#Sat Oct 24 19:57:33 GMT 2009
 app.grails.version=1.2-M3
 app.name=dont-forget-your-food-supplies
 app.servlet.version=2.4
