Neues Design, Ablaufdatum für Pakete

--- a/prodDbHaushaltVerwaltung.properties
+++ b/prodDbHaushaltVerwaltung.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.10
-#Sat Oct 24 21:28:29 CEST 2009
+#Sat Nov 07 21:13:32 CET 2009
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
