--- a/application.properties
+++ b/application.properties
@@ -1,13 +1,15 @@
 #Grails Metadata file
-#Sat Oct 24 19:57:33 GMT 2009
-app.grails.version=1.2-M3
+#Sat Nov 07 21:15:30 CET 2009
+app.grails.version=1.2-M4
 app.name=dont-forget-your-food-supplies
 app.servlet.version=2.4
-app.version=0.2
+app.version=0.3
+plugins.feeds=1.5
 plugins.filterpane=0.6.1
-plugins.hibernate=1.2-M3
+plugins.hibernate=1.2-M4
 plugins.jquery=1.3.2.4
 plugins.mail=0.7.1
 plugins.quartz=0.4.1
 plugins.searchable=0.5.5
-plugins.tomcat=1.2-M3
+plugins.shiro=1.0.1
+plugins.tomcat=1.2-M4
