--- a/application.properties
+++ b/application.properties
@@ -1,15 +1,15 @@
 #Grails Metadata file
-#Wed Nov 11 09:50:00 CET 2009
-app.grails.version=1.2-M4
+#Sat Jan 23 19:36:13 CET 2010
+app.grails.version=1.2.0
 app.name=dont-forget-your-food-supplies
 app.servlet.version=2.4
 app.version=0.3
 plugins.feeds=1.5
 plugins.filterpane=0.6.1
-plugins.hibernate=1.2-M4
+plugins.hibernate=1.2.0
 plugins.jquery=1.3.2.4
 plugins.mail=0.7.1
 plugins.quartz=0.4.1
 plugins.searchable=0.5.5
 plugins.shiro=1.0.1
-plugins.tomcat=1.2-M4
+plugins.tomcat=1.2.0
