--- a/application.properties
+++ b/application.properties
@@ -1,15 +1,15 @@
 #Grails Metadata file
-#Sat Jan 30 21:24:47 CET 2010
-app.grails.version=1.2.0
+#Sun Aug 15 15:35:31 CEST 2010
+app.grails.version=1.3.4
 app.name=dont-forget-your-food-supplies
 app.servlet.version=2.4
 app.version=0.3
 plugins.feeds=1.5
-plugins.filterpane=0.6.1
-plugins.hibernate=1.2.0
-plugins.jquery=1.3.2.4
-plugins.mail=0.7.1
-plugins.quartz=0.4.1
-plugins.searchable=0.5.5
-plugins.shiro=1.0.1
-plugins.tomcat=1.2.0
+plugins.filterpane=0.7
+plugins.hibernate=1.3.4
+plugins.jquery=1.4.2.5
+plugins.mail=0.9
+plugins.quartz=0.4.2
+plugins.searchable=0.5.5.1
+plugins.shiro=1.1-SNAPSHOT
+plugins.tomcat=1.3.4
