--- a/application.properties
+++ b/application.properties
@@ -11,5 +11,5 @@ plugins.jquery=1.4.2.5
 plugins.mail=0.9
 plugins.quartz=0.4.2
 plugins.searchable=0.5.5.1
-plugins.shiro=1.1-SNAPSHOT
+plugins.shiro=1.0.1
 plugins.tomcat=1.3.4
